refactoring after comments